; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/panel/extr_panel-raydium-rm68200.c_rm68200_init_sequence.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/panel/extr_panel-raydium-rm68200.c_rm68200_init_sequence.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rm68200 = type { i32 }

@MCS_CMD_MODE_SW = common dso_local global i32 0, align 4
@MCS_CMD2_P0 = common dso_local global i32 0, align 4
@MCS_EXT_PWR_IC = common dso_local global i32 0, align 4
@MCS_BT2CTR = common dso_local global i32 0, align 4
@MCS_SETAVDD = common dso_local global i32 0, align 4
@MCS_SETAVEE = common dso_local global i32 0, align 4
@MCS_SGOPCTR = common dso_local global i32 0, align 4
@MCS_BT3CTR = common dso_local global i32 0, align 4
@MCS_BT4CTR = common dso_local global i32 0, align 4
@MCS_INVCTR = common dso_local global i32 0, align 4
@MCS_STBCTR = common dso_local global i32 0, align 4
@MCS_SDCTR = common dso_local global i32 0, align 4
@MCS_VCMCTR = common dso_local global i32 0, align 4
@MCS_SETVGN = common dso_local global i32 0, align 4
@MCS_SETVGP = common dso_local global i32 0, align 4
@MCS_SW_CTRL = common dso_local global i32 0, align 4
@MCS_CMD2_P2 = common dso_local global i32 0, align 4
@GOA_VSTV1 = common dso_local global i32 0, align 4
@GOA_VSTV2 = common dso_local global i32 0, align 4
@GOA_VCLK1 = common dso_local global i32 0, align 4
@GOA_VCLK2 = common dso_local global i32 0, align 4
@GOA_VCLK_OPT1 = common dso_local global i32 0, align 4
@GOA_BICLK1 = common dso_local global i32 0, align 4
@GOA_BICLK2 = common dso_local global i32 0, align 4
@GOA_BICLK3 = common dso_local global i32 0, align 4
@GOA_BICLK4 = common dso_local global i32 0, align 4
@GOA_BICLK_OPT1 = common dso_local global i32 0, align 4
@GOA_BICLK_OPT2 = common dso_local global i32 0, align 4
@MCS_GOA_GPO1 = common dso_local global i32 0, align 4
@MCS_GOA_GPO2 = common dso_local global i32 0, align 4
@MCS_GOA_EQ = common dso_local global i32 0, align 4
@MCS_GOA_CLK_GALLON = common dso_local global i32 0, align 4
@MCS_GOA_FS_SEL0 = common dso_local global i32 0, align 4
@MCS_GOA_FS_SEL1 = common dso_local global i32 0, align 4
@MCS_GOA_FS_SEL2 = common dso_local global i32 0, align 4
@MCS_GOA_FS_SEL3 = common dso_local global i32 0, align 4
@MCS_GOA_BS_SEL0 = common dso_local global i32 0, align 4
@MCS_GOA_BS_SEL1 = common dso_local global i32 0, align 4
@MCS_GOA_BS_SEL2 = common dso_local global i32 0, align 4
@MCS_GOA_BS_SEL3 = common dso_local global i32 0, align 4
@MCS_GOA_BS_SEL4 = common dso_local global i32 0, align 4
@MCS_CMD2_P3 = common dso_local global i32 0, align 4
@MCS_GAMMA_VP = common dso_local global i32 0, align 4
@MCS_GAMMA_VN = common dso_local global i32 0, align 4
@MCS_CMD1_UCS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rm68200*)* @rm68200_init_sequence to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rm68200_init_sequence(%struct.rm68200* %0) #0 {
  %2 = alloca %struct.rm68200*, align 8
  store %struct.rm68200* %0, %struct.rm68200** %2, align 8
  %3 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %4 = load i32, i32* @MCS_CMD_MODE_SW, align 4
  %5 = load i32, i32* @MCS_CMD2_P0, align 4
  %6 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %3, i32 %4, i32 %5)
  %7 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %8 = load i32, i32* @MCS_EXT_PWR_IC, align 4
  %9 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %7, i32 %8, i32 192, i32 83, i32 0)
  %10 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %11 = load i32, i32* @MCS_BT2CTR, align 4
  %12 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %10, i32 %11, i32 229)
  %13 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %14 = load i32, i32* @MCS_SETAVDD, align 4
  %15 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %13, i32 %14, i32 10)
  %16 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %17 = load i32, i32* @MCS_SETAVEE, align 4
  %18 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %16, i32 %17, i32 10)
  %19 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %20 = load i32, i32* @MCS_SGOPCTR, align 4
  %21 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %19, i32 %20, i32 82)
  %22 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %23 = load i32, i32* @MCS_BT3CTR, align 4
  %24 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %22, i32 %23, i32 83)
  %25 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %26 = load i32, i32* @MCS_BT4CTR, align 4
  %27 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %25, i32 %26, i32 90)
  %28 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %29 = load i32, i32* @MCS_INVCTR, align 4
  %30 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %28, i32 %29, i32 0)
  %31 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %32 = load i32, i32* @MCS_STBCTR, align 4
  %33 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %31, i32 %32, i32 10)
  %34 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %35 = load i32, i32* @MCS_SDCTR, align 4
  %36 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %34, i32 %35, i32 6)
  %37 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %38 = load i32, i32* @MCS_VCMCTR, align 4
  %39 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %37, i32 %38, i32 86)
  %40 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %41 = load i32, i32* @MCS_SETVGN, align 4
  %42 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %40, i32 %41, i32 160, i32 0)
  %43 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %44 = load i32, i32* @MCS_SETVGP, align 4
  %45 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %43, i32 %44, i32 160, i32 0)
  %46 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %47 = load i32, i32* @MCS_SW_CTRL, align 4
  %48 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %46, i32 %47, i32 17)
  %49 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %50 = load i32, i32* @MCS_CMD_MODE_SW, align 4
  %51 = load i32, i32* @MCS_CMD2_P2, align 4
  %52 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %49, i32 %50, i32 %51)
  %53 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %54 = load i32, i32* @GOA_VSTV1, align 4
  %55 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %53, i32 %54, i32 5)
  %56 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %57 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %56, i32 2, i32 11)
  %58 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %59 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %58, i32 3, i32 15)
  %60 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %61 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %60, i32 4, i32 125, i32 0, i32 80)
  %62 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %63 = load i32, i32* @GOA_VSTV2, align 4
  %64 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %62, i32 %63, i32 5, i32 22, i32 13, i32 17, i32 125, i32 0, i32 80)
  %65 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %66 = load i32, i32* @GOA_VCLK1, align 4
  %67 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %65, i32 %66, i32 7, i32 8, i32 1, i32 2, i32 0, i32 125, i32 0, i32 133, i32 8)
  %68 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %69 = load i32, i32* @GOA_VCLK2, align 4
  %70 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %68, i32 %69, i32 3, i32 4, i32 5, i32 6, i32 0, i32 125, i32 0, i32 133, i32 8)
  %71 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %72 = load i32, i32* @GOA_VCLK_OPT1, align 4
  %73 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %71, i32 %72, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0)
  %74 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %75 = load i32, i32* @GOA_BICLK1, align 4
  %76 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %74, i32 %75, i32 7, i32 8)
  %77 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %78 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %77, i32 45, i32 1)
  %79 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %80 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %79, i32 47, i32 2, i32 0, i32 64, i32 5, i32 8, i32 84, i32 125, i32 0)
  %81 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %82 = load i32, i32* @GOA_BICLK2, align 4
  %83 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %81, i32 %82, i32 3, i32 4, i32 5, i32 6, i32 0)
  %84 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %85 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %84, i32 61, i32 64)
  %86 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %87 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %86, i32 63, i32 5, i32 8, i32 84, i32 125, i32 0)
  %88 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %89 = load i32, i32* @GOA_BICLK3, align 4
  %90 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %88, i32 %89, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0)
  %91 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %92 = load i32, i32* @GOA_BICLK4, align 4
  %93 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %91, i32 %92, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0)
  %94 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %95 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %94, i32 88, i32 0, i32 0, i32 0)
  %96 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %97 = load i32, i32* @GOA_BICLK_OPT1, align 4
  %98 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %96, i32 %97, i32 0, i32 0, i32 0, i32 0, i32 0)
  %99 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %100 = load i32, i32* @GOA_BICLK_OPT2, align 4
  %101 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %99, i32 %100, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0)
  %102 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %103 = load i32, i32* @MCS_GOA_GPO1, align 4
  %104 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %102, i32 %103, i32 0, i32 0, i32 0, i32 0)
  %105 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %106 = load i32, i32* @MCS_GOA_GPO2, align 4
  %107 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %105, i32 %106, i32 0, i32 32, i32 0)
  %108 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %109 = load i32, i32* @MCS_GOA_EQ, align 4
  %110 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %108, i32 %109, i32 8, i32 8, i32 8, i32 8, i32 8, i32 8, i32 0, i32 0)
  %111 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %112 = load i32, i32* @MCS_GOA_CLK_GALLON, align 4
  %113 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %111, i32 %112, i32 0, i32 0)
  %114 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %115 = load i32, i32* @MCS_GOA_FS_SEL0, align 4
  %116 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %114, i32 %115, i32 191, i32 2, i32 6, i32 20, i32 16, i32 22, i32 18, i32 8, i32 63)
  %117 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %118 = load i32, i32* @MCS_GOA_FS_SEL1, align 4
  %119 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %117, i32 %118, i32 63, i32 63, i32 63, i32 63, i32 12, i32 10, i32 14, i32 63, i32 63, i32 0)
  %120 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %121 = load i32, i32* @MCS_GOA_FS_SEL2, align 4
  %122 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %120, i32 %121, i32 4, i32 63, i32 63, i32 63, i32 63, i32 5, i32 1, i32 63, i32 63, i32 15)
  %123 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %124 = load i32, i32* @MCS_GOA_FS_SEL3, align 4
  %125 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %123, i32 %124, i32 11, i32 13, i32 63, i32 63, i32 63, i32 63)
  %126 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %127 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %126, i32 162, i32 63, i32 9, i32 19, i32 23, i32 17, i32 21)
  %128 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %129 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %128, i32 169, i32 7, i32 3, i32 63)
  %130 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %131 = load i32, i32* @MCS_GOA_BS_SEL0, align 4
  %132 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %130, i32 %131, i32 63, i32 5, i32 1, i32 23, i32 19, i32 21, i32 17, i32 15, i32 63)
  %133 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %134 = load i32, i32* @MCS_GOA_BS_SEL1, align 4
  %135 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %133, i32 %134, i32 63, i32 63, i32 63, i32 63, i32 11, i32 13, i32 9, i32 63, i32 63, i32 7)
  %136 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %137 = load i32, i32* @MCS_GOA_BS_SEL2, align 4
  %138 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %136, i32 %137, i32 3, i32 63, i32 63, i32 63, i32 63, i32 2, i32 6, i32 63, i32 63, i32 8)
  %139 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %140 = load i32, i32* @MCS_GOA_BS_SEL3, align 4
  %141 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %139, i32 %140, i32 12, i32 10, i32 63, i32 63, i32 63, i32 63, i32 63, i32 14, i32 16, i32 20)
  %142 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %143 = load i32, i32* @MCS_GOA_BS_SEL4, align 4
  %144 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %142, i32 %143, i32 18, i32 22, i32 0, i32 4, i32 63)
  %145 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %146 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %145, i32 220, i32 2)
  %147 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %148 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %147, i32 222, i32 18)
  %149 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %150 = load i32, i32* @MCS_CMD_MODE_SW, align 4
  %151 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %149, i32 %150, i32 14)
  %152 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %153 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %152, i32 1, i32 117)
  %154 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %155 = load i32, i32* @MCS_CMD_MODE_SW, align 4
  %156 = load i32, i32* @MCS_CMD2_P3, align 4
  %157 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %154, i32 %155, i32 %156)
  %158 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %159 = load i32, i32* @MCS_GAMMA_VP, align 4
  %160 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %158, i32 %159, i32 0, i32 12, i32 18, i32 14, i32 6, i32 18, i32 14, i32 11, i32 21, i32 11, i32 16, i32 7, i32 15, i32 18, i32 12, i32 0)
  %161 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %162 = load i32, i32* @MCS_GAMMA_VN, align 4
  %163 = call i32 (%struct.rm68200*, i32, i32, i32, ...) @dcs_write_cmd_seq(%struct.rm68200* %161, i32 %162, i32 0, i32 12, i32 18, i32 14, i32 6, i32 18, i32 14, i32 11, i32 21, i32 11, i32 16, i32 7, i32 15, i32 18, i32 12, i32 0)
  %164 = load %struct.rm68200*, %struct.rm68200** %2, align 8
  %165 = load i32, i32* @MCS_CMD_MODE_SW, align 4
  %166 = load i32, i32* @MCS_CMD1_UCS, align 4
  %167 = call i32 (%struct.rm68200*, i32, i32, ...) @dcs_write_seq(%struct.rm68200* %164, i32 %165, i32 %166)
  ret void
}

declare dso_local i32 @dcs_write_seq(%struct.rm68200*, i32, i32, ...) #1

declare dso_local i32 @dcs_write_cmd_seq(%struct.rm68200*, i32, i32, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
